Fix failing unit tests.